--- a/scss/templates/_navigation.scss
+++ b/scss/templates/_navigation.scss
@@ -15,6 +15,7 @@
 }
 
 .navbar{
+  overflow: hidden;
   .nav-item{
     .nav-link{
       font-family: $tertiary-font;
